fix: left align

--- a/app/javascript/pages/inviteTo/invite-to.module.scss
+++ b/app/javascript/pages/inviteTo/invite-to.module.scss
@@ -179,6 +179,7 @@
     padding-top: var(--seeds-spacer-content);
     button {
       font-size: var(--seeds-font-size-base);
+      text-align: left;
     }
   }
 
